<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        tools:text="@string/cod" />

    <EditText
        android:id="@+id/edtcodarchivos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/cod"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        tools:text="@string/nombrearchivo" />

    <EditText
        android:id="@+id/edtnombrearchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/nombrearchivo"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="24sp"
        tools:text="@string/tamaño" />

    <EditText
        android:id="@+id/edttamaño"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/tamaño"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="24sp"
        tools:text="@string/tipo" />

    <EditText
        android:id="@+id/edttipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/tipo"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnconsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_consultar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_eliminar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnlistado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_listado"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_actualizar"
        android:textSize="24sp" />
</LinearLayout>